# Setpoint

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.mock-plc  Dockerfile.operator  Makefile  README.md  ci-local.sh  demo.sh  docker-compose.yml  prometheus.yml
.github/workflows/: ci.yml  e2e-proof.yml
artifacts/: README.md
artifacts/latest/: .template.drift-after.json  .template.drift-before.json  .template.kubernetes-events.txt  .template.operator-logs.txt  .template.prometheus-metrics.txt  .template.proof.json  .template.report.md  README.md
charts/setpoint/: Chart.yaml  values.yaml
charts/setpoint/templates/: _helpers.tpl  crd.yaml  dashboard-configmap.yaml  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
config/samples/: README.md  industrialplc-line1.yaml
crates/api/: Cargo.toml
crates/api/src/: audit.rs  error.rs  handlers.rs  main.rs  policy_sim.rs
crates/drift-simulator/: Cargo.toml
crates/drift-simulator/src/: main.rs
crates/mock-plc/: Cargo.toml
crates/mock-plc/src/: chaos.rs  main.rs  server.rs
crates/operator/: Cargo.toml
crates/operator/src/: controller.rs  crd.rs  crypto.rs  leader.rs  lib.rs  main.rs  metrics.rs  plc_client.rs  policy.rs
crates/setpointctl/: Cargo.toml
crates/setpointctl/src/: commands.rs  k8s_client.rs  main.rs  output.rs
docs/: ARCHITECTURE.md  demo-script.md  executive-summary.md  proof.md
docs/adr/: 001-why-rust-operator.md  002-modbus-tcp-strategy.md  003-rename-to-setpoint.md
docs/grafana-dashboards/: dashboard.yml  setpoint-dashboard.json
docs/screenshots/: README.md
k8s/: crd.yaml  deployment-local.yaml  deployment.yaml  mock-plc.yaml  networkpolicy.yaml  rbac.yaml  sample-plc.yaml
landing/: package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/app/console/: page.tsx
landing/app/console/_components/: api-state.tsx  cards.tsx  dashboard.tsx  forms.tsx  plc-inventory.tsx  proof.tsx  shell.tsx  simulator.tsx  status.tsx
landing/app/console/_lib/: api.ts  demo-data.ts  format.ts  mappers.ts  types.ts
landing/components/: footer.tsx  github-cta.tsx  hero.tsx  how-it-works.tsx  nav.tsx  proof-bento.tsx  scada-console.tsx  spec.tsx  theme-toggle.tsx  yaml-builder.tsx
scripts/: aggregate-proof.sh  capture-metrics.sh  flagship-proof.sh  generate-report.sh
