[workspace]
resolver = "2"
members = [
    "crates/operator",
    "crates/setpointctl",
    "crates/mock-plc",
    "crates/drift-simulator",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/apinzon/setpoint-operator"
homepage = "https://github.com/apinzon/setpoint-operator"
authors = ["Setpoint Maintainers"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
