[package]
name = "drift-simulator"
version = "0.2.0"
edition = "2021"
description = "Setpoint drift simulator - injects deterministic register drift to exercise the operator's remediation policies"
license = "MIT"
repository = "https://github.com/apinzon/setpoint-operator"

[[bin]]
name = "drift-simulator"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-modbus = { version = "0.9", default-features = false, features = ["tcp"] }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
