[package]
name = "mock-plc"
version = "0.2.0"
edition = "2021"
description = "Mock Modbus TCP server for Setpoint development and proof runs"
license = "MIT"
repository = "https://github.com/apinzon/setpoint-operator"

[dependencies]
tokio = { workspace = true }
tokio-modbus = { version = "0.9", default-features = false, features = ["tcp", "tcp-server"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
