[package]
name = "operator"
version = "0.2.0"
edition = "2021"
description = "Setpoint Kubernetes operator - reconciler for industrial PLCs"
license = "MIT"
repository = "https://github.com/apinzon/setpoint-operator"

[lib]
name = "operator"
path = "src/lib.rs"

[[bin]]
name = "operator"
path = "src/main.rs"

[dependencies]
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = "0.13"
axum = "0.7"
tokio-modbus = { version = "0.9", default-features = false, features = ["tcp"] }
schemars = "0.8"
futures = "0.3"
chrono = "0.4"
