[package]
name = "setpointctl"
version = "0.2.0"
edition = "2021"
description = "Setpoint CLI - reconcile industrial PLCs from the command line"
license = "MIT"
repository = "https://github.com/apinzon/setpoint-operator"

[[bin]]
name = "setpointctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.1"
comfy-table = "7.1"

kube = { version = "0.87", features = ["derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

chrono = "0.4"
indicatif = "0.17"

operator = { path = "../operator" }
